<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Videos@Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="pick_server">Pick a Server</string>
    <string name="media_route_menu_title">Cast</string>

    <!--  Used in Error Dialog -->
    <string name="ok">OK</string>
    <!-- Title of the Error Dialog -->
    <string name="error">Error</string>
    <!-- Shown in VideoCastControllerActivity -->
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="loading">Loading&#8230;</string>
    <!-- Used in Router Controller Dialog -->
    <string name="no_media_info">No media information available</string>
    <!-- Session Recovery Dialog message -->
    <string name="session_reconnection_attempt">Attempting to recover previous session&#8230;</string>
    <!-- onApplicationConnectionFailed() errors -->
    <string name="failed_to_launch_app">Failed to launch application</string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="failed_to_find_app">The application you are trying to launch is not available on your Chromecast device</string>
    <!--  Error messages for the play.pause in mini player -->
    <string name="failed_to_play">Failed to start the playback of media</string>
    <string name="failed_to_pause">Failed to pause the playback of media</string>
    <string name="failed_unknown">An unknown error was encountered</string>
    <!--  Failure to connect -->
    <string name="failed_to_connect">Could not connect to the device</string>
    <string name="action_play">Play</string>
    <string name="action_download">Download</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_imdb">View on IMDb</string>
    <string name="action_netflix">View on Netflix</string>
    <string name="stream_desc">streaming icon</string>
    <string name="cast_desc">casting icon</string>
    <string name="download_desc">download icon</string>
    <!-- Title -->
    <string name="subjects">Subjects</string>
    <string name="genres">Genres</string>
    <string name="directors">Directed by</string>
    <string name="cast">Cast</string>
    <string name="languages">Languages</string>
    <!-- Preferences -->
    <string name="captions_settings">Captions Settings</string>
    <string name="captions">Captions</string>
    <string name="pref_sort_videos">Sort Videos</string>
    <string name="pref_quick_play">Quick Play</string>
    <string name="pref_stream_highest">Stream Highest Quality</string>
    <string name="pref_compatible_video">Prefer MP4 / H.264</string>
    <string name="pref_launch_downloads">Launch Downloads</string>
    <string name="sort_alphabetic">Title</string>
    <string name="sort_most_recent">Most Recent</string>
    <string name="sort_oldest">Date Added</string>
    <string name="downloaded">Downloaded</string>
    <!-- Update dialog -->
    <string name="update_title">%1$s Update</string>
    <string name="update_msg">Version %1$s is available. Would you like to download it now?</string>
    <string name="download">Download</string>
    <string name="no_download">Cancel</string>
    <string name="download_started">Download started.</string>

</resources>
