<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/activatedBackgroundIndicator"
                android:minHeight="64dip"
                android:mode="twoLine"
                android:paddingBottom="2dip"
                android:paddingTop="2dip">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/poster"
        android:layout_width="32dp"
        android:layout_height="60dp"
        android:scaleType="centerInside"/>

    <TextView
        android:id="@android:id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="?android:attr/listPreferredItemPaddingLeft"
        android:layout_marginTop="2dip"
        android:layout_toEndOf="@id/poster"
        android:layout_toRightOf="@id/poster"
        android:textAppearance="?android:attr/textAppearanceListItem"/>

    <RelativeLayout
        android:id="@+id/indicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/text1"
        android:layout_alignStart="@android:id/text1"
        android:layout_below="@android:id/text1">

        <TextView
            android:id="@+id/downloaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloaded"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ImageView
            android:id="@+id/stream"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stream_desc"
            android:src="@drawable/ind_stream"/>

        <ImageView
            android:id="@+id/download"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/stream"
            android:layout_toRightOf="@id/stream"
            android:contentDescription="@string/download_desc"
            android:src="@drawable/ind_download"/>

        <ImageView
            android:id="@+id/cast"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/download"
            android:layout_toRightOf="@id/download"
            android:contentDescription="@string/cast_desc"
            android:src="@drawable/ind_cast"/>

    </RelativeLayout>

    <TextView
        android:id="@android:id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text1"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/indicators"
        android:layout_toRightOf="@id/indicators"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>
